增加客户经理辅助信息

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,7 @@
 #\u6570\u636E\u5E93\u914D\u7F6E\u4FE1\u606F\u53C2\u6570\u5316
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/cmis?useUnicode=true&characterEncoding=UTF-8
+#jdbc.url=jdbc:mysql://bj-cdb-676k2hvw.sql.tencentcdb.com:61344/cmis?useUnicode=true&characterEncoding=UTF-8
 jdbc.username=root
 jdbc.password=123456
+#jdbc.password=cmis123456
